--- a/package.json
+++ b/package.json
@@ -57,8 +57,10 @@
     "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
     "crypto-js": "^3.1.9-1",
+    "electron-cookies": "^1.1.0",
     "js-base64": "^2.5.1",
     "md5": "^2.2.1",
+    "reconnecting-websocket": "^4.2.0",
     "v-viewer": "^1.4.2",
     "vue": "^2.5.16",
     "vue-electron": "^1.0.6",
